<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondoBotones"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondoBotones"
            android:text="@string/_1"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_2"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_3"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_4"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_5"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondoBotones">

        <Button
            android:id="@+id/b6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_7"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_9"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/b0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondoBotones"
            android:text="@string/_0"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbMostrarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/mostrar_contrase_a"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/bValidar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondoBotones"
            android:text="@string/validar"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/dado_aleatorio"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>